--- a/addnotewidget/partials/_notes.htm
+++ b/addnotewidget/partials/_notes.htm
@@ -22,7 +22,7 @@
     </div>
 
     <div class="form-group">
-        <textarea class="form-control" name="note" id="" cols="30" rows="10" placeholder="You have something to say?"></textarea>
+        <textarea class="form-control" name="description" id="" cols="30" rows="10" placeholder="You have something to say?"></textarea>
     </div>
 
     <div class="form-group">
