--- a/quicknotewidget/partials/_notes.htm
+++ b/quicknotewidget/partials/_notes.htm
@@ -1,15 +1,15 @@
 <div class="report-widget">
-    <h3>Quick Note</h3>
+    <h3><?= $this->property('title') ?></h3>
 
-    <div class="pane">
-    <ul class="list-nostyle">
-        <?php foreach( $notes as $note ): ?>
-            <li class="list-group-item"><?= $note->title ?></li>
-        <?php endforeach ?>
-    </ul>
-    </div>
+    <?php if( $this->property('showList') ): ?>
+        <ul class="list-nostyle">
+            <?php foreach( $notes as $note ): ?>
+                <li class="list-group-item"><?= $note->title ?></li>
+            <?php endforeach ?>
+        </ul>
 
-    <br/>
+        <br/>
+    <?php endif; ?>
 
     <form></form>
     <?= Form::open([
